--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.25",
+    "html-to-image": "^1.11.13",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "pg": "^8.16.3",
